# mock-api

./: .gitignore  Cargo.toml  README.md  app.c  data.sql  db.sql  logger.yml  mock_data.json
.cargo/: config.toml
benches/: Cargo.toml  benchmark.rs
benches/examples/: send_request.rs
benches/src/: client.rs  lib.rs
cli/: app.c
docs/: document.md  routes.txt
initial_schema/: 0v1_reset.sql  0v1_schema.sql
migration/: 01_data.sql  01_tables.sql
migrations/: 01_tables.sql  20250519170112_init_schema.sql
restaurant_benches/: Cargo.toml
restaurant_benches/examples/: send_request.rs
src/: error.rs  main.rs  store.rs
src/handlers/: authentication_handlers.rs  comment_handlers.rs  files_handlers.rs  food_handlers.rs  home.rs  hours_handler.rs  mod.rs  order_handlers.rs  owner_handlers.rs  restaurant_handlers.rs
src/routes/: authentication.rs  authentication_routes.rs  comment_routes.rs  comments.rs  file_routes.rs  files.rs  food_routes.rs  home.rs  mod.rs  order_routes.rs  owner_routes.rs  restaurant_routes.rs  restaurants.rs
src/store/: auth.rs  comment.rs  food.rs  mod.rs  open_hours.rs  order.rs  owner.rs  payment.rs  restaurant.rs  search.rs  utils.rs
src/types/: account.rs  comment.rs  food.rs  mod.rs  orders.rs  owner.rs  pagination.rs  payment.rs  restaurant.rs  timer.rs
src/utils/: arguments.rs  colors.rs  fake_data.rs  initial_sql.rs  migration.rs  mod.rs  upload_file.rs
static/: index.html
