[package]
name = "restaurant-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["full"]}
serde = { version = "1.0.0", features = ["derive"]}
serde_json = "1.0.137"
warp = "0.3.7"
benches = { path = "benches" }
uuid = { version = "1.0.0", features = ["v4"]}
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
chrono = { version = "0.4.39"}
sqlx = { version = "0.8.0", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] } 
clap ={ version = "4", features = ["cargo"]}
urlencoding = "2.1.3"

