[package]
name = "restaurant-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["libc","macros","net","parking_lot","rt-multi-thread","time","tracing"]}
serde = { version = "1.0.0", features = ["derive"]}
serde_json = "1.0.137"
warp = {version = "0.3.7", default-features = false, features = ["multipart"]}
uuid = { version = "1.0.0", features = ["v4", "serde"]}
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
chrono = { version = "0.4.39", features = ["serde"]}
sqlx = { version = "0.8.0", default-features = false, features = [ "runtime-tokio-rustls", "migrate", "postgres", "uuid", "macros", "chrono"] } 
clap ={ version = "4", features = ["cargo"]}
urlencoding = "2.1.3"
futures = "0.3.31"
rand = "0.9"
rust-argon2 = "2.0"
paseto = "2"


[profile.dev]
incremental = true          # Keep incremental compilation
codegen-units = 256         # Parallelize compilation (faster, less optimized)
opt-level = 0               # No optimizations 
debug = 1                   # Minimal debug info
overflow-checks = false     # Disable integer overflow checks
panic = "abort"             # Faster panic handling

[profile.release]
opt-level = 3               # Full optimizations
codegen-units = 1           # Slower compilation but better runtime perf
lto = true                  # Link-time optimization